Issue #20404: reject non-text encodings early in TextIOWrapper.